--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Moving # The title of the blog
-author: Your Name # Your name 
-email: your-email@domain.com # your email shown in the footer
-url: http://huangyz.name/moving/ # this is your site's root address.
+author: data-summary-blog # Your name 
+email: yongchana@gmail.com # your email shown in the footer
+url: https://data-summary-blog.github.io/ # this is your site's root address.
 description: > # this means to ignore newlines until "show_excerpts:"
   A clean and minimalist theme for Jekyll.
 favicon: "./favicon.ico" # set the favicon of the site 
