--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Moving # The title of the blog
+title: Data Summary Blog # The title of the blog
 author: data-summary-blog # Your name 
-email: yongchana@gmail.com # your email shown in the footer
+# email: yongchana@gmail.com # your email shown in the footer
 url: https://data-summary-blog.github.io/ # this is your site's root address.
 description: > # this means to ignore newlines until "show_excerpts:"
-  A clean and minimalist theme for Jekyll.
+  Day-to-day basis of what we learn
 favicon: "./favicon.ico" # set the favicon of the site 
 
 show_excerpts: false # set to true to show excerpts on the homepage
@@ -12,20 +12,20 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 moving:
   avatar_url: "https://i.loli.net/2019/08/26/JzCLhDWPEybZr2T.jpg" # avatar in about page
-  about_you: a short description about you. # short description about you in about page
+  about_you: Chan(https://github.com/yongchand) and Sungjoon(https://github.com/skeptic-biped) from PUBG Data Team # short description about you in about page
   date_format: "%b %d" # date format of posts in home page
   back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
 
   # generate social links in about page.
   social_links:
     # twitter: 
-    github:  huangyz0918
-    rss: RSS
+    # github:  yongchana
+    # rss: RSS
     # dribbble: 
-    facebook: huangyz0918
+    # facebook: yongchana
     # flickr:   
     # instagram: 
-    linkedin: yizheng-huang
+    # linkedin: yizheng-huang
     # pinterest: 
     # youtube: 
     # youtube_channel: 
