--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Data Summary Blog # The title of the blog
-author: data-summary-blog # Your name 
+author: Data Summary Blog # Your name 
 # email: yongchana@gmail.com # your email shown in the footer
 url: https://data-summary-blog.github.io/ # this is your site's root address.
 description: > # this means to ignore newlines until "show_excerpts:"
@@ -11,8 +11,8 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # Moving date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 moving:
-  avatar_url: "https://i.loli.net/2019/08/26/JzCLhDWPEybZr2T.jpg" # avatar in about page
-  about_you: Chan(https://github.com/yongchand) and Sungjoon(https://github.com/skeptic-biped) from PUBG Data Team # short description about you in about page
+  avatar_url: "https://cdn.pixabay.com/photo/2015/11/19/21/10/glasses-1052010_960_720.jpg" # avatar in about page
+  about_you: Data Engineers # short description about you in about page
   date_format: "%b %d" # date format of posts in home page
   back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
 
