--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Data Summary Blog # Your name
 # email: yongchana@gmail.com # your email shown in the footer
 url: https://data-summary-blog.github.io/ # this is your site's root address.
 description: > # this means to ignore newlines until "show_excerpts:"
-  Day-to-day basis of what we learn
+  Day-to-day basis of what I learn
 favicon: "./favicon.ico" # set the favicon of the site 
 
 show_excerpts: false # set to true to show excerpts on the homepage
@@ -11,21 +11,21 @@ show_excerpts: false # set to true to show excerpts on the homepage
 # Moving date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 moving:
-  avatar_url: "https://cdn.pixabay.com/photo/2015/11/19/21/10/glasses-1052010_960_720.jpg" # avatar in about page
-  about_you: Data Engineers # short description about you in about page
+  avatar_url: "https://upload.wikimedia.org/wikipedia/ko/c/cd/Doraemon.PNG" # avatar in about page
+  about_you: Yongchan Hong # short description about you in about page
   date_format: "%b %d" # date format of posts in home page
   back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
 
   # generate social links in about page.
   social_links:
     # twitter: 
-    # github:  yongchana
+    github:  yongchand
     # rss: RSS
     # dribbble: 
     # facebook: yongchana
     # flickr:   
     # instagram: 
-    # linkedin: yizheng-huang
+    linkedin: yongchanhong
     # pinterest: 
     # youtube: 
     # youtube_channel: 
